--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,11 @@ nav ul li a:hover {
 }
 
 h2 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    color: #333;
-    position: relative;
+    color: #0056b3;
+    margin-bottom: 15px;
+    font-size: 2em; /* Larger size for About Me */
 }
+
 
 h2::after {
     content: '';
@@ -65,7 +65,24 @@ h2::after {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
+h3 {
+    color: #0056b3;
+    margin-bottom: 10px;
+    font-size: 1.75em; /* Slightly smaller than About Me */
+}
+h4 {
+    margin: 0;
+    color: #333;
+    font-size: 1.25em; /* Size smaller than h3 */
+    margin-bottom: 5px;
+}
 
+/* Institution/Organization names */
+p {
+    margin: 0;
+    font-style: italic;
+    color: #777;
+}
 .hero img {
     border-radius: 50%;
     width: 150px;
